[gd_scene load_steps=6 format=3 uid="uid://bk4s5pg0mws31"]

[ext_resource type="Script" uid="uid://derkbvcdntqs5" path="res://object.gd" id="1_0i3lm"]
[ext_resource type="Theme" uid="uid://b4rgocusn6q8r" path="res://objecttheme.tres" id="1_3xuqs"]
[ext_resource type="Texture2D" uid="uid://dyjm3o3w8vtx3" path="res://assets/prototype.png" id="2_0i3lm"]
[ext_resource type="Texture2D" uid="uid://djfm6oy1ksuxi" path="res://assets/prototype2.png" id="4_dwaef"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dwaef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0i3lm")
}, {
"duration": 1.0,
"texture": ExtResource("4_dwaef")
}],
"loop": true,
"name": &"test",
"speed": 5.0
}]

[node name="object" type="Node2D" groups=["clickable"]]
script = ExtResource("1_0i3lm")

[node name="Button" type="Button" parent="."]
offset_left = -255.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
theme = ExtResource("1_3xuqs")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dwaef")
animation = &"test"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
